--- a/data/aboutSection/ru/aboutSection.yml
+++ b/data/aboutSection/ru/aboutSection.yml
@@ -4,20 +4,35 @@ enable: true
 title: >
   ##  Обо мне
 
-  Инженер-разработчик по компьютерному зрению, робототехник
+  Инженер-разработчик по компьютерному зрению
   
 content: >
   ### Программирую и проектирую системы компьютерного зрения.
+    
+    В моей копилке уже имеются следующие проекты:
 
+    * слежение БПЛА за полосой движения;
 
-  Получил бакалавриат в области мехатроники и робототехники в МГТУ им. Н. Э. Баумана, после чего прошел отбор на магистратуру в Университет Иннополис, специализация "Робототехника и компьютерное зрение".
+    * обнаружение посадочной площадки БПЛА;
 
+    * детектирование стакана для манипулятора-бариста;
 
-  Участвовал в множестве проектов, связанных как с управлением робототехническими системами, так и с компьютерным зрением: слежение БПЛА за полосой движения, обнаружение посадочной площадки БПЛА, манипулятор-бариста, пинг-понг манипулятор, автоматизация автомойки, четырехногий робот, АДАС, беспилотный КАМАЗ, система сигнализации выхода из безопасной зоны работы на железной дороге и так далее.
+    * детектирование мяча и слежение за ним для пинг-понг манипулятора;
 
+    * мониторинг автомойки;
 
+    * управление четырехногим роботом (собака);
 
-  На данный момент работаю в Лаборатории Беспилотных Технологий Университета Иннополис в должности специалист по компьютерному зрению.
+    * системы помощи водителю (LDWS...);
+
+    * беспилотные транспортные средства специального назначения;
+
+    * слияние данных с сенсоров, калибровка сенсоров;
+
+    * Реализация кругового bird-eye view для мобильных роботов;
+
+    * слежение за объектами и так далее...
+
   
 button1Name: Нанять меня
 button2Name: Загрузить CV
