--- a/data/hero/en/hero.yml
+++ b/data/hero/en/hero.yml
@@ -1,8 +1,8 @@
 ---
 enable: true
-topTitle: Hello, I am Ilia Sevostianov
+topTitle: Hello, My name is Ilia Sevostianov
 content: >
-  # Robotics & Computer Vision Projects
+  # Computer Vision Engineer
 
   Entrust your project or task to the expert who will do it at the highest level and on time
 buttonName: Contact me
