--- a/data/hero/ru/hero.yml
+++ b/data/hero/ru/hero.yml
@@ -2,7 +2,7 @@
 enable: true
 topTitle:  Привет, меня зовут Севостьянов Илья
 content: >
-  # Проекты и задачи по робототехнике и компьютерному зрению
+  # Инженер по компьютерному зрению
 
   Доверьте свой проект или задачу специалисту, который сделает это на высшем уровне и в срок.
 
