--- a/data/resumeSection/ru/resumeSection.yml
+++ b/data/resumeSection/ru/resumeSection.yml
@@ -95,15 +95,25 @@ experience:
       
       ###### Специалист по Компьютерному Зрению
 
-      Участвую в проектах с беспилотными ТС и летательными аппаратами
+      - Разработал LED систему компьютерного зрения для определения положения и ориентации посадочной площадки БПЛА “день-ночь”
 
-      * Разработал LED систему компьютерного зрения для определения положения и ориентации посадочной площадки БПЛА "день-ночь"
+      - Сделал вклад в систему определения зоны приземления БПЛА для задачи безопасной автономной посадки
 
-      * Сделал вклад в систему определения зоны приземления БПЛА для задачи безопасной автономной посадки
+      - Разработал систему помощи водителю при съезде с полосы для автобуса. Был ответственен за обработку выхода нейронной сети и ее развертывание, программную реализацию алгоритма, а также функционирование камеры.
 
-      * Разработал систему помощи водители при съезде с полосы для автобуса. Был ответственен за обработку выхода нейронной сети, ее деплой и функционирование камеры.
+      - (Авто)сбор данных с датчиков, сборка образов для проекта и т. д.
 
-      * Развертывание нейронных сетей и калибровка сенсоров на КАМАЗе, который должен выполнять определенную миссию на бездорожье автономно
+      - Калибровка сенсоров, получение внутренних и внешних параметров
+
+      - Реализация кругового обзора с камер (BEV)
+
+      - Слияние данных с сенсоров различных модальностей
+
+      - Подбор сенсоров для различных проектов
+
+      - Развертывание нейронных сетей
+
+      - постобработка выхода моделей
 
       ###### Достижение: 
       
