--- a/data/serviceSection/ru/serviceSection.yml
+++ b/data/serviceSection/ru/serviceSection.yml
@@ -8,16 +8,10 @@ title: >
 
 service:
   - content: >
-      #### Робототехника
-
-      Управление для роботов, подбор компонент, расчет кинематики, динамики и пр.
-      
-    image: images/service/robot.svg
-  - content: >
       #### Программирование
 
       
-      Python, MATLAB, C и C++.
+      Python, C и C++.
       
       
       Различные задачи, проекты, требующие программирования. 
@@ -32,25 +26,3 @@ service:
       OpenCV, Pytorch, TensorFlow, ONNX, TensorRT, подбор сенсоров, калибровка сенсоров, clearML и пр.
       
     image: images/service/cv.svg
-
-  # - content: >
-  #     #### Arduino 
-
-      
-  #     Буду рад поучаствовать в любых проектах, связанных с Arduino. 
-      
-      
-  #     Ардуино чрезвычайно удобны в использовании и являются отличным решением для быстрого создания прототипов, а также некомплексных проектов.
-
-
-  #   image: images/service/arduino.svg
-
-  # - content: >
-  #     #### Веб-Дизайн
-
-      
-  #     Я закончил полугодовой курс веб-дизайна в 2019 году.
-      
-      
-  #     Я могу создавать презентации, чеклисты, фавиконы, постыв различных соцсетях, простые логотипы, статичные рекламные объявления и т. д.
-  #   image: images/service/ui-ux.svg
