--- a/data/aboutSection/en/aboutSection.yml
+++ b/data/aboutSection/en/aboutSection.yml
@@ -8,13 +8,31 @@ title: >
 content: >
   ### I program and design computer vision systems.
 
-  I received a bachelor's degree in mechatronics and robotics at Bauman Moscow State Technical University, after which I graduated a master's degree from Innopolis University, specializing in "Robotics and Computer Vision".
+  I already have the following projects in my piggy bank:
+
+    * UAV lane tracking;
+
+    * UAV landing pad detection;
+
+    * cup detection for barista manipulator;
+
+    * ball detection and tracking for ping-pong manipulator;
+
+    * car wash monitoring;
+
+    * control of a four-legged robot (a dog);
+
+    * advanced driver-assistance systems (LDWS...);
+
+    * unmanned special purpose vehicles;
+
+    * sensor data fusion, sensor intrinsics-and-extrinsics calibration;
+
+    * Implementation of circular bird-eye view for mobile robots;
+
+    * Object tracking and so on.
 
 
-  I have participated in many projects related both to robotic systems control and computer vision: UAV lane tracking, UAV landing platform detection, barista manipulator, ping-pong manipulator, car wash automation, four-legged robot, ADAS, autonomous truck, railways safe zone exit alarm system and so on.
-
-
-  At the moment I am working in the Autonomous Technologies Laboratory of Innopolis University as a computer vision specialist.
 
 button1Name: Hire me
 button2Name: Download CV
