--- a/data/aboutSection/en/aboutSection.yml
+++ b/data/aboutSection/en/aboutSection.yml
@@ -37,5 +37,5 @@ content: >
 button1Name: Hire me
 button2Name: Download CV
 button1Target: en/contact
-button2Target: en/files/CV/English_CV.pdf
+button2Target: en/files/CV/Ilia_Sevostianov_CV.pdf
 image: images/about/about-img.png
