--- a/data/hero/en/hero.yml
+++ b/data/hero/en/hero.yml
@@ -8,5 +8,5 @@ content: >
 buttonName: Contact me
 buttonURL: en/contact
 image: images/hero/hero.jpg
-# videoThumb: images/hero/popup-thumb.png
+# videoThumb: images/hero/hero.jpg
 # videoURL: https://www.youtube.com/watch?v=dQw4w9WgXcQ
