--- a/data/resumeSection/ru/resumeSection.yml
+++ b/data/resumeSection/ru/resumeSection.yml
@@ -18,6 +18,14 @@ tab2Target: experience
 education:
 
   - content: >
+      ####  C++ Developer Specialization
+
+      Прохожу курс компании SkillBox длительностью в 1 год для получения глубоких навыков языка программирования C++
+
+      * [Диплом](./not_yet.png)
+    time: nov, 2022 - nov, 2023
+
+  - content: >
       ####  Последовательные Модели
 
       Закончил 5ый курс в специализации "Глубокое обучение" от DeepLearning.AI.
@@ -90,6 +98,28 @@ education:
 
 
 experience:
+
+  - content: >
+      #### ТехТранс
+      
+      ###### Computer Vision Engineer / Team Lead
+
+      - Прототип системы отслеживания нарушений на рельсах
+
+      - Железнодорожный симулятор, который позволил сэкономить ресурсы на отладке алгоритмов и проведении экспериментов
+
+      - Выбор датчиков
+
+      - Обучение моделей, агрегация и пополнение наборов данных с использованием ClearML
+
+      - Отслеживание объектов, обнаружение
+
+      - Ведение проектов, предложение путей решений, руководство командой из 3х специалистов
+      
+      - Оценка диспаратности и глубины
+
+    time: март, 2022 - дек, 2022
+
   - content: >
       #### Лаборатория Беспилотных Технологий, г. Иннополис, Россия
       
@@ -117,7 +147,7 @@ experience:
 
       ###### Достижение: 
       
-      * 2 статьи РИНЦ и 1 IEEE
+      * 2 статьи РИНЦ и 2 IEEE, 1 патент
 
     time: 2021, фев --
 
