--- a/data/serviceSection/ru/serviceSection.yml
+++ b/data/serviceSection/ru/serviceSection.yml
@@ -4,7 +4,7 @@ topTitle: Область деятельности
 title: >
   ## Услуги, Которые Я Предлагаю
 
-  Ниже представлен список услуг, которые я рад Вам предоставить. В случае, если то, что Вас интересует, не представлено ниже, Вы все равно можете попробовать связаться со мной. Может, я что-то не указал.
+  Я предлагаю следующие услуги. Если у вас есть другие потребности, не стесняйтесь также обращаться ко мне.
 
 service:
   - content: >
@@ -23,6 +23,16 @@ service:
 
       Разработка систем компьютерного зрения. 
 
-      OpenCV, Pytorch, TensorFlow, ONNX, TensorRT, подбор сенсоров, калибровка сенсоров, clearML и пр.
+      * OpenCV
+
+      * Pytorch, TensorFlow
+      
+      * Развертывание и оптимизация нейронок
+      
+      * Подбор и калибровка сенсоров
+
+      * Обнаружение, сегментация и отслеживание объектов
+      
+      * классические подходы и др.
       
     image: images/service/cv.svg
