--- a/data/aboutSection/ru/aboutSection.yml
+++ b/data/aboutSection/ru/aboutSection.yml
@@ -3,35 +3,40 @@ enable: true
 # topTitle: Info
 title: >
   ##  Обо мне
-  
+
 content: >
-  ### Программирую и проектирую системы компьютерного зрения.
-    
-    В моей копилке уже имеются следующие проекты:
+  ### Участвую в программировании и проектировании систем компьютерного зрения.
 
-    * слежение БПЛА за полосой движения;
+    В моей копилке уже есть следующие проекты:
+    * передовые системы помощи водителю (LDWS, LCA, ACC, TLR, TSR и т.д.);
 
-    * обнаружение посадочной площадки БПЛА;
+    * симуляция CARLA для разработки и тестирования функций автономных автомобилей;
 
-    * детектирование стакана для манипулятора-бариста;
+    * Авторазвертывание сервисов на железку с помощью Ansible;
 
-    * детектирование мяча и слежение за ним для пинг-понг манипулятора;
+    * Реализация кругового обзора "с высоты птичьего полета" для мобильных роботов;
+
+    * 3D - 2D проекция и наоборот для объектов;
+
+    * Слежение за объектами и линиями для автономных автомобилей;
+
+    * объединение данных сенсоров, калибровка сенсоров по внутренним и внешним признакам;
+
+    * Отслеживание полос движения для БПЛА;
+
+    * обнаружение посадочных площадок для БПЛА;
+
+    * обнаружение чашки кофе для манипулятора-бариста;
+
+    * обнаружение и отслеживание мяча для пинг-понг манипулятора;
 
     * мониторинг автомойки;
 
-    * управление четырехногим роботом (собака);
+    * беспилотные автомобили специального назначения;
 
-    * системы помощи водителю (LDWS...);
+    * и т.д.
 
-    * беспилотные транспортные средства специального назначения;
 
-    * слияние данных с сенсоров, калибровка сенсоров;
-
-    * Реализация кругового bird-eye view для мобильных роботов;
-
-    * слежение за объектами и так далее...
-
-  
 button1Name: Связаться
 button2Name: Загрузить CV
 button1Target: ru/contact
