--- a/data/resumeSection/ru/resumeSection.yml
+++ b/data/resumeSection/ru/resumeSection.yml
@@ -4,8 +4,8 @@ topTitle: Резюме
 title: >
   ## Бэкграунд
 
-  Нажав на кнопку «Образование», Вы увидите университеты и курсы, которые я окончил. 
-  
+  Нажав на кнопку «Образование», Вы увидите университеты и курсы, которые я окончил.
+
 
   Нажав на кнопку «Опыт», Вы найдете список крупных проектов, соревнований, в которых я принимал участие.
 
@@ -20,9 +20,9 @@ education:
   - content: >
       ####  C++ Developer Specialization
 
-      Прохожу курс компании SkillBox длительностью в 1 год для получения глубоких навыков языка программирования C++
+      Прошел длительностью в 1 год для получения углубленных знаний языка программирования C++
 
-      * [Диплом](./not_yet.png)
+      * [Диплом](../../../ru/files/cpp_ru.pdf)
     time: nov, 2022 - nov, 2023
 
   - content: >
@@ -44,7 +44,7 @@ education:
   - content: >
       ####  Структура Проектов Машинного Обучения
 
-      
+
       Закончил 3ий курс в специализации "Глубокое обучение" от DeepLearning.AI.
 
       * [Сертификат](https://www.coursera.org/account/accomplishments/certificate/VU3YWM6EYQ4J)
@@ -52,7 +52,7 @@ education:
 
   - content: >
       #### Улучшение Нейронных Сетей: Регулировка гиперпараметров, регуляризация и оптимизация
-      
+
       Закончил 2ой курс в специализации "Глубокое обучение" от DeepLearning.AI.
 
       * [Сертификат](https://www.coursera.org/account/accomplishments/certificate/Y5KRD3B3RT95)
@@ -62,7 +62,7 @@ education:
   - content: >
       #### Нейронные сети и Глубокое Обучение
 
-      
+
       Закончил 1ый курс в специализации "Глубокое обучение" от DeepLearning.AI.
 
       * [Сертификат](https://www.coursera.org/account/accomplishments/certificate/2Z4YTDCCHFZU)
@@ -72,10 +72,10 @@ education:
   - content: >
       #### Магистр Компьютерных Наук
 
-      
+
       Окончил Университет Иннополис. Дипломная работа была посвящена динамической ходьбе четвероногого робота.
 
-      ###### Достижения: 
+      ###### Достижения:
 
       * [Диплом за отличную успеваемость в осеннем и весеннем семестрах 2020 года](../../../ru/files/inno_diploma_excellent_academic.jpg)
 
@@ -86,10 +86,10 @@ education:
   - content: >
       #### Бакалавр Мехатроники и Робототехники
 
-      
+
       Окончил МГТУ им. Н. Э. Баумана. Дипломный проект был посвящен разработке и управлению трехзвенным вертикально шагающим роботом.
 
-      ###### Достижение: 
+      ###### Достижение:
 
       * Лучший студент кафедры робототехники (2018)
 
@@ -101,7 +101,7 @@ experience:
 
   - content: >
       #### ТехТранс
-      
+
       ###### Computer Vision Engineer / Team Lead
 
       - Прототип системы отслеживания нарушений на рельсах
@@ -115,14 +115,14 @@ experience:
       - Отслеживание объектов, обнаружение
 
       - Ведение проектов, предложение путей решений, руководство командой из 3х специалистов
-      
+
       - Оценка диспаратности и глубины
 
     time: март, 2022 - дек, 2022
 
   - content: >
       #### Лаборатория Беспилотных Технологий, г. Иннополис, Россия
-      
+
       ###### Специалист по Компьютерному Зрению
 
       - Разработал LED систему компьютерного зрения для определения положения и ориентации посадочной площадки БПЛА “день-ночь”
@@ -145,15 +145,15 @@ experience:
 
       - постобработка выхода моделей
 
-      ###### Достижение: 
-      
+      ###### Достижение:
+
       * 2 статьи РИНЦ и 2 IEEE, 1 патент
 
     time: 2021, фев --
 
   - content: >
       #### Соревнование "Аэробот 2020", г. Таганрог, Россия
-      
+
       ###### Специалист по Компьютерному Зрению
 
       Участвовал в команде "Raccoon Lab" от Университета Иннополис.
@@ -162,15 +162,15 @@ experience:
 
       * Разработал ROS ноду, чтобы дрон мог определить место посадки и запомнить его, чтобы вернуться обратно после завершения миссии.
 
-      ###### Достижение: 
-      
+      ###### Достижение:
+
       * Победа в соревновании
 
     time: 2019, окт - 2020, нов
 
   - content: >
       #### Лаборатория Робототехники Университета Иннополис, г. Иннополис, Россия
-      
+
       ###### Стажер
 
       * Разработал компьютерное зрение для манипулятора UR10, чтобы определять положение мяча для настольного тенниса с помощью RealSense D435i по отношению к базе робота.
@@ -181,7 +181,7 @@ experience:
 
   - content: >
       #### JBL Robotics, г. Москва, Россия
-      
+
       ###### Помощник Инженера
 
       * Разработаны ноды ROS для управления роботом-бариста
