--- a/data/serviceSection/ru/serviceSection.yml
+++ b/data/serviceSection/ru/serviceSection.yml
@@ -10,29 +10,31 @@ service:
   - content: >
       #### Программирование
 
-      
-      Python, C и C++.
-      
-      
-      Различные задачи, проекты, требующие программирования. 
-      
+
+      Python и C++.
+
+
+      Различные задачи, проекты, требующие программирования.
+
     image: images/service/program.svg
 
   - content: >
       #### Компьютерное Зрение
 
-      Разработка систем компьютерного зрения. 
+      Разработка систем компьютерного зрения.
 
       * OpenCV
 
-      * Pytorch, TensorFlow
-      
+      * Pytorch, TensorFlow, tensorRT
+
       * Развертывание и оптимизация нейронок
-      
+
       * Подбор и калибровка сенсоров
 
       * Обнаружение, сегментация и отслеживание объектов
-      
+
+      * Многозадачные сеточки
+
       * классические подходы и др.
-      
+
     image: images/service/cv.svg
